maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  var dir:Direction = Direction.NORTH
  while(!estSurBiscuit())
  {
    dir = getDirection()
    if(random3()==0)
    {
      goNorth()
    }
    else
    	keepHandOnSideWall()
  }
  prendBiscuit()
  positionFin()
}

def keepHandOnSideWall() {
  while(testGauche() && !estFaceMur())
  {
    avance()
  }
  gauche()
  if(!estFaceMur())
  	avance()
  else
  {
    retourne()
    if(!estFaceMur())
    	avance()
  }
}

def testGauche():Boolean = {
  var test = false
  gauche()
  test = estFaceMur()
  droite()
  return test
}

def positionFin() {
  droite()
  if(!estFaceMur())
  	retourne()
  else
  gauche()
}

def goNorth() {
  while(getDirection()!=Direction.NORTH)
  {
    droite()
  }
  while(!estFaceMur())
  {
    avance()
  }
}